Add env name, minimal setup and ES prefix

--- a/training-handson-work/src/main/resources/application.properties
+++ b/training-handson-work/src/main/resources/application.properties
@@ -9,6 +9,8 @@ flowable.security.impersonate.allowed=true
 # == Development Properties ==
 flowable.license.db-store-enabled=false
 flowable.inspect.enabled=true
+info.env.name=TRAINING
+flowable.platform.idm.minimal-setup=true
 # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
 # In order for hot swapping to work for the custom.js and custom.css
@@ -17,6 +19,7 @@ spring.web.resources.chain.cache=false
 
 # == Elasticless / Embedded DB ==
 flowable.indexing.enabled=false
+flowable.indexing.index-name-prefix=training-
 management.health.elasticsearch.enabled=false
 management.metrics.export.elastic.enabled=false
 spring.datasource.driver-class-name=org.h2.Driver
