--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.flowable.training</groupId>
-    <artifactId>training-hands-on-parent</artifactId>
+    <groupId>com.training</groupId>
+    <artifactId>training-handson-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <name>training-handson-parent</name>
+    <description>Parent Module</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -25,7 +28,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <com.flowable.platform.version>3.12.3</com.flowable.platform.version>
         <liquibase.skip>false</liquibase.skip>
     </properties>
