--- a/training-handson-control/pom.xml
+++ b/training-handson-control/pom.xml
@@ -7,9 +7,12 @@
     <artifactId>training-hands-on-control</artifactId>
     <packaging>jar</packaging>
 
+    <name>training-handson-control</name>
+    <description>Training Control</description>
+
     <parent>
-        <groupId>com.flowable.training</groupId>
-        <artifactId>training-hands-on-parent</artifactId>
+        <groupId>com.training</groupId>
+        <artifactId>training-handson-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
